--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.heartratemonitoringapp" >
+    package="com.example.heartratemonitoringapp">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
+        android:name=".app.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HeartRateMonitoringApp" >
+        android:theme="@style/Theme.HeartRateMonitoringApp"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="true" >
+            android:name=".app.monitoring.background.BackgroundMonitoringActivity"
+            android:exported="false" />
+        <activity
+            android:name=".app.monitoring.live.LiveMonitoringActivity"
+            android:exported="false" />
+        <activity
+            android:name=".app.auth.login.LoginActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".app.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.register.RegisterActivity"
+            android:name=".app.auth.register.RegisterActivity"
             android:exported="false" />
+        <activity
+            android:name=".app.scanner.ScannerActivity"
+            android:exported="false" />
+        <service android:name=".app.monitoring.background.BackgroundMonitoringService"/>
     </application>
 
 </manifest>
