--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
             android:exported="false" />
         <activity
             android:name=".form.FormActivity"
+            android:showOnLockScreen="true"
+            android:showWhenLocked="true"
             android:exported="false" />
         <activity
             android:name=".dashboard.profile.editpassword.EditPasswordActivity"
